# Hedging-of-Financial-Derivatives

./: Algorithmic Trading .ipynb  Automated Trading.ipynb  Code-of-conduct.md  Crude_Oil_analysis.ipynb  Crypto Movements.ipynb  Crypto_Movements.ipynb  DataProcessing.ipynb  FeatureExtractionInHedgingForRelainceStockHistoricalData.ipynb  Geometric_brownian_motion_simulation.ipynb  Hedging_Currencies.ipynb  LICENSE  Monte_Carlo_Simulation_GBM.ipynb  NIFTY__50.csv  NSEI 2015-2023.csv  Nifty_50(NSEI).ipynb  PairsTrading.ipynb  PairsTrading_johansen_cointegration_test.ipynb  README.md  RELIANCE.NS.modified.xls  Random Walk.ipynb  StockPricePredictionUsingKNNModel  compare the regions financial market growth increase with the financial index increase.ipynb  contributing.md  forex.ipynb  forex.py  readme.md
.github/: pull_request_template.md
AirtelStockPrediction/: BHARTIARTL.NS.csv
Bank-Customer-Churn-Prediction/: Bank.ipynb
Beta-weighted-stock-portfolio/: Readme.md  betaweighted.ipynb
Car pricing INDIA by linear regression/: predict used car prices linearregression.ipynb
China stocks/: china stocks.ipynb  china_stocks.ipynb
Quant-Finance-Library/: LICENSE.txt  README.md  pyproject.toml  setup.py
Quant-Finance-Library/.github/workflows/: github_gamma.yml
Quant-Finance-Library/iquant/: VaR.py  calmar_ratio.py  daily_volatility.py  information_ratio.py  log_daily_return.py  macd.py  max_drawdown.py  pca_for_dimensionality_reduction.py  portfolio_optimisation.py  simple_daily_return.py
Quant-Finance-Library/iquant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1243 files in other folders)
